--- a/my-react-app/src/pages/Login.css
+++ b/my-react-app/src/pages/Login.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to right, #3b82f6, #9333ea);
+  background: linear-gradient(to right,#fc8653,#f1e14f);
 }
 
 /* Box */
@@ -36,7 +36,7 @@
 }
 
 .login-box input:focus {
-  border-bottom: 2px solid #3b82f6;
+  border-bottom: 2px solid #f77331;
 }
 
 /* Forgot password */
@@ -83,7 +83,7 @@
 }
 
 .link {
-  color: #007bff;
+  color: #eb8246;
   text-decoration: none;
   font-weight: 500;
 }
